# matchdates

./: .gitignore  README.md  alembic.ini  dates.json  mada.toml  matchresults-1739545951.json  pyproject.toml  scrapy.cfg
alembic/: env.py
alembic/versions/: 2024_11_05_2058-9e4e42fb2ea4_initialize.py  2025_01_18_2337-5549be225bd9_.py  2025_02_15_0013-45be84790d67_.py  2025_02_20_1600-35d122548309_.py
src/matchdates/: __init__.py  date_utils.py  datespider.py  format.py  graph_utils.py  marespider.py  models.py  queries.py  settings.py
src/matchdates/cli/: __init__.py  calendar.py  graph.py  list_items.py  main.py  move.py  on_date.py  reload.py  results.py  scan.py  show.py  styling.py  upcoming.py
src/matchdates/common_data/: __init__.py  matchdate.py  results.py
src/matchdates/data2orm/: __init__.py  matchdate.py  results.py
src/matchdates/orm/: __init__.py  base.py  club.py  db.py  draw.py  errors.py  location.py  matchdate.py  player.py  result.py  season.py  team.py
tests/: conftest.py  example_result.json
tests/data2orm_tests/: test_matchdates.py  test_results.py
tests/orm_tests/: test_club.py  test_doubles_result.py  test_location.py  test_match_result.py  test_matchdate.py  test_player.py  test_season.py  test_singles_result.py  test_team.py
tests/scrape_tests/: conftest.py  test_matchdates.py  test_results.py
tests/scrape_tests/pages/: https___www.swiss-badminton.ch_league_4D2A187C-0855-4B4F-B106-6B6413FC17BF_team-match_6006.html  https___www.swiss-badminton.ch_league_4D2A187C-0855-4B4F-B106-6B6413FC17BF_team-match_7033.html  (+5 more)
(+11 files in other folders)
